Added Snippets and Styles for Comments

--- a/styles/styles.less
+++ b/styles/styles.less
@@ -1,3 +1,4 @@
-atom-text-editor {
-
+atom-text-editor.editor .syntax--entity.syntax--name.syntax--section{
+  color:lightblue;
+  font-style: italic;
 }
